<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="355dp"
        android:layout_gravity="fill_horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_horizontal"
            android:src="@drawable/login_background_xml" />

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="130dp"

            android:fontFamily="@font/fangzheng"
            android:text="@string/login_sub_title"
            android:textColor="#ffffffff"
            android:textSize="16sp" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="51.33dp"
        android:fontFamily="@font/fangzheng"
        android:text="智能街道，安全更便捷"
        android:textColor="#ff7b7b7b"
        android:textSize="13sp" />


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".View.login.LoginActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23.33dp"
            android:layout_marginTop="190dp"
            android:layout_marginRight="23.33dp"
            android:layout_marginBottom="116.67dp"
            android:background="@drawable/login_text_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="43.3dp"
                android:layout_marginTop="39.33dp"
                android:layout_marginBottom="26.67dp"
                android:fontFamily="@font/fangzheng"
                android:text="@string/login"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/username"
                android:drawableLeft="@drawable/login_left_xml"
                style="@style/AllWriteLoginText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:theme="@style/AllBlueLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/password"
                style="@style/AllWriteLoginText"
                android:drawableLeft="@drawable/passwd_left_xml"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:theme="@style/AllBlueLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <EditText
                android:id="@+id/theusername"
                style="@style/AllWriteLoginText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/usersname"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:selectAllOnFocus="true"
                android:theme="@style/AllBlueLogin"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/toolbar_button"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="33dp"
                    android:layout_marginRight="33dp"
                    android:background="@drawable/login_button_background"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/PureWhite"
                    android:textSize="@dimen/button_text_size" />
                <ProgressBar
                    android:id="@+id/progress_circular"
                    android:visibility="gone"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:indeterminateTint="@color/colorPrimary"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="26dp"
                android:layout_marginRight="43dp"
                android:layout_marginBottom="33.67dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/register"
                    style="@style/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="@font/fangzheng"
                    android:text="@string/action_sign_in" />

                <TextView
                    style="@style/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/fangzheng"
                    android:text="@string/forget_passwd" />
            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>
</FrameLayout>

