<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/details_root"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/activity_horizontal_margin"
    app:cardBackgroundColor="@color/PureWhite"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    app:cardCornerRadius="50dp"
    app:cardElevation="2dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_gravity="left|center_vertical">

        <ImageView
            android:id="@+id/device_status_pic"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            tools:src="@mipmap/normal" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/MainTextstyleWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_vertical_spacing"
                android:text="@string/devices_name" />

            <TextView
                style="@style/MainTextstyleWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/devices_number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/device_name"
                style="@style/MainTextstyleWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_vertical_spacing"
                tools:text="大棚" />

            <TextView
                android:id="@+id/device_number"
                style="@style/MainTextstyleWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12345" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/MainTextstyleWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="@dimen/text_vertical_spacing"
                android:text="@string/devices_status" />

            <TextView
                android:id="@+id/device_status"
                style="@style/MainTextstyleWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                tools:text="正常" />
        </LinearLayout>

    </LinearLayout>



</android.support.v7.widget.CardView>