<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Home.Controls.ControlFragment">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/patrol_button"
            android:background="@drawable/homepage_button_background"
            style="@style/homepage_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/homepage_button_text"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="18.67dp"
                    android:src="@drawable/waring"
                    android:layout_marginRight="16dp"
                    android:visibility="gone"
                    />
                <TextView
                    style="@style/homepage_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/patrol_record" />
            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/cover_button"
            style="@style/homepage_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/homepage_button_background">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/homepage_button_text"
                >
                <ImageView
                    android:id="@+id/cover_waring"
                    android:layout_width="20dp"
                    android:layout_height="18.67dp"
                    android:src="@drawable/waring"
                    android:layout_marginRight="16dp"
                    android:visibility="gone"
                    />
                <TextView
                    style="@style/homepage_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cellar_cover" />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/important_button"
            style="@style/homepage_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/homepage_button_background">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/homepage_button_text"
                >
                <ImageView
                    android:id="@+id/important_waring"
                    android:layout_width="20dp"
                    android:layout_height="18.67dp"
                    android:src="@drawable/waring"
                    android:layout_marginRight="16dp"
                    android:visibility="gone"
                    />
                <TextView
                    style="@style/homepage_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/important_place" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>


</FrameLayout>